# ElementVoxels

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/shaders/: background.frag  background.vert  clear_field.comp  compute_test.comp  fluid_marching_cubes.comp  fluid_voxel.frag  fluid_voxel.vert  gas_ray_march.comp  impact_billboard.frag  impact_billboard.vert  marching_cubes.comp  metaball_splat.comp  particle_sim.comp  post_fog_glow.frag  post_fullscreen.vert  screen_quad.frag  skybox.frag  skybox.vert  skybox_nebula_bake.frag  skybox_runtime.frag  speedlines.frag  speedlines.vert  spell_prev.frag  spell_prev.vert  sun_billboard.frag  sun_billboard.vert  voxel.frag  voxel.vert  voxelSplatShader.comp  voxel_anim.frag  voxel_anim.vert  voxel_debug.frag
game/: CMakeLists.txt
game/src/: CharacterController.cpp  CharacterController.h  Game.cpp  Game.h  IScene.h  MainThreadDispatcher.h  SceneId.h  SceneManager.cpp  SceneManager.h
game/src/Entities/: Enemy.h  EnemyManager.cpp  EnemyManager.h  EnemyMeshing.h  EnemySpells.h  EnemyVoxelVolume.h  LocalMarchingCubes.h  WaveManager.cpp  WaveManager.h
game/src/Input/: InputActionMap.h  InputManager.h
game/src/Sounds/: SoundManager.cpp  SoundManager.h
game/src/entities/: Entity.cpp  Entity.h  VoxelEntity.cpp  VoxelEntity.h
game/src/physics/: CraterStampBatch.h  DestructibleObject.h  FastCraterCarver.h  MaterialCollisionPolicy.h  SpellPhysicsManager.cpp  SpellPhysicsManager.h  VoxelCarver.h  VoxelPhysicsBody.h  VoxelPhysicsManager.cpp  VoxelPhysicsManager.h
game/src/rendering/: Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  FixedGridChunkManager.h  GpuStructsStd430.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.cpp  Mesh.h  MultiGridChunkManager.cpp  MultiGridChunkManager.h  Shader.cpp  Shader.h  SunBillboard.cpp  SunBillboard.h  TestChunk.cpp  TestChunk.h  VoxelMesher.cpp  VoxelMesher.h  VoxelRenderer.cpp  VoxelRenderer.h  VoxelStructures.h  marchingTables.cpp  marchingTables.h  smoothMesher.cpp  smoothMesher.h  stb_image_impl.cpp  stb_image_resize_impl.cpp
game/src/scenes/: GameOverScene.cpp  GameOverScene.h  GameplayScene.cpp  GameplayScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h
game/src/spells/: SpellEffect.h  SpellSystem.cpp  SpellSystem.h  SpellWorldContext.h  spellCastAsync.cpp  spellCastAsync.h
game/src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
